testing build server some more

--- a/packages/system/public/views/index.html
+++ b/packages/system/public/views/index.html
@@ -1,5 +1,5 @@
 <section class="welcome container-fluid" data-ng-controller="IndexController">
-  Welcome!!!
+  Welcome!
   <!--
   <div class="col-md-12 first">
     MEAN.io makes building apps simpler and faster. With this website framework, you can <a href="https://github.com/linnovate/mean/wiki/CLI#user-management">create members</a>, </br>
