Added percent below target price

--- a/packages/portfolios/public/views/view.html
+++ b/packages/portfolios/public/views/view.html
@@ -93,9 +93,10 @@
       <!--
       <td data-title="'Louis Buy Below'" sortable="'LouisBuyBelow'">
       </td>
-      <td data-title="'% Below Target'" sortable="'PercentBelowTarget'">
-      </td>
     -->
+      <td data-title="'% Below Target'" sortable="'PercentBelow'">
+        {{ stock.PercentBelow }}
+      </td>
       <td data-title="'Last Price'" sortable="'LastPrice'">
         {{ stock.LastPrice }}
       </td>
